--- a/tasks/lvl4T1/index.html
+++ b/tasks/lvl4T1/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Dr. Eleanor Gaye">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Lvl4 Task 1 Marking up a letter</title>
 </head>
 <body>
     <p>
