--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <a href="tasks/lvl4T1/index.html">Lvl4 Task 1 Marking up a letter</a>
+    
+    <br><br>
 
     <a href="tasks/lvl5T4/24.css15.html">Lvl5 Task 4 Web forms - working with user data</a>
+
+    <br><br>
+
+    <a href="tasks/lvl6T1/lvl6T1.html">Lvl6 Task 1 Structuring Planet Data</a>
 </body>
 </html>
